<resources>
    <string name="app_name">MiniLydia</string>
    <string name="fragment_users_empty_list">Aucun utilisateur à afficher</string>
    <string name="user_firstname">Firstname</string>
    <string name="user_email">Email</string>
    <string name="user_surname">Surname</string>
    <string name="user_phone">Phone</string>
    <string name="user_city">City</string>
    <string name="user_registered">Member since</string>
    <string name="title_users_fragment">List of users</string>
    <string name="title_users_details_fragment">Profile information</string>
</resources>